Resolves: tdf#126661 unexpected sort between freeze+thaw

Change-Id: Ibb6b404d32e38c72fb1ff4be73f3a5f116d55692
Reviewed-on: https://gerrit.libreoffice.org/76809
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>